<resources>
    <string name="app_name">Discriminant</string>
    <string name="hint">Enter coefficients</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="error">Error!</string>
    <string name="no">No roots</string>
    <string name="count">Count!</string>
    <string name="result"> </string>
    <string name="reset">Reset</string>


</resources>
