<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="50dp"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/enter_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/a"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/a"
                android:inputType="numberDecimal|numberSigned"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/b"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/b"
                android:inputType="numberDecimal|numberSigned"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/c"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/c"
                android:inputType="numberDecimal|numberSigned"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="onCountButtonClick"
                android:text="@string/count"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:background="@drawable/blue_btn_switch"
                android:textSize="30sp" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="onResetButtonClick"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/red90"
                android:background="@drawable/red_btn_switch"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>